[gd_scene load_steps=10 format=3 uid="uid://h2rdpaiuw7bi"]

[ext_resource type="Script" path="res://characters/Player.gd" id="1_oywke"]
[ext_resource type="PackedScene" uid="uid://cy0h4ax6wwpgn" path="res://items/bomb.tscn" id="2_8x10s"]
[ext_resource type="Script" path="res://characters/PlayerCamera.gd" id="2_g2i4n"]
[ext_resource type="AudioStream" uid="uid://8q60rv41tp6d" path="res://audio/place_bomb.mp3" id="4_4xeaf"]
[ext_resource type="PackedScene" uid="uid://dlj131se0wkcb" path="res://scenes/ui/hud.tscn" id="5_we5ou"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_owj6d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4hq67"]
albedo_color = Color(0.239216, 0.494118, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_g31fd"]
size = Vector3(0.9, 2, 0.9)

[sub_resource type="BoxShape3D" id="BoxShape3D_i6l41"]
size = Vector3(0.9, 2, 0.9)

[node name="Player" type="CharacterBody3D" groups=["players"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 35
script = ExtResource("1_oywke")
bomb_scene = ExtResource("2_8x10s")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_owj6d")
surface_material_override/0 = SubResource("StandardMaterial3D_4hq67")

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_g31fd")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 7, 5)
script = ExtResource("2_g2i4n")
lerp_speed = 0.1
target_path = NodePath("..")
offset = Vector3(0, 7, 5)

[node name="CooldownTimer" type="Timer" parent="."]

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="DetectionCollision" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("BoxShape3D_i6l41")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(1, 0, 0)
collision_mask = 35

[node name="BombPlacedSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_4xeaf")
volume_db = -5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("5_we5ou")]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
